--- a/.config/waybar/current-colors.css
+++ b/.config/waybar/current-colors.css
@@ -1,10 +1,10 @@
 /* ------------------------*/
-/* Catppuccin Mocha - Dark */
+/* Dark Solirized Osaka */
 /* ------------------------*/
 
-@define-color bg_main #1e1e2e;
-@define-color text_main #cdd6f4;
-@define-color accent #cba6f7;
-@define-color battery_critical #f38ba8; /* red */
-@define-color battery_charging #a6e3a1; /* green */
+@define-color bg_main #063642;
+@define-color text_main #ffffff;
+@define-color accent #b58900;
+@define-color battery_critical rgba(238,46,36,1);
+@define-color battery_charging #2ad55c;
 @define-color overlay rgba(255,255,255,0.1);
