--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -6,7 +6,7 @@
 
 * {
   border: none;
-  border-radius: 0;
+  border-radius: 4px;
   min-height: 0;
   font-family: JetBrainsMono Nerd Font;
   font-weight: bold;
@@ -25,6 +25,7 @@ window#waybar.hidden {
 
 #workspaces {
   background-color: transparent;
+  margin-left: 2px;
 }
 
 #workspaces button {
@@ -32,7 +33,7 @@ window#waybar.hidden {
   min-width: 0;
   box-shadow: inset 0 -3px transparent;
   padding: 3px 18px;
-  margin: 6px 3px;
+  margin: 4px 2px;
   border-radius: 4px;
   background-color: @accent;
   opacity: 0.5;
@@ -70,6 +71,18 @@ window#waybar.hidden {
 
   color: @text_main;
   box-shadow: inset 0 -3px transparent;
+}
+
+#battery.discharging {
+  color: @text_main;
+}
+
+#battery.critical {
+  color: @battery_critical;
+}
+
+#battery.charging {
+  color: @battery_charging;
 }
 
 #clock {
