--- a/.config/wlogout/colors.css
+++ b/.config/wlogout/colors.css
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------
- * GruvBox
+ * Matugen Generated
  * ----------------------------------------------------- */
 
-@define-color bg-color #282828;
-@define-color border-color #83a598;
+@define-color bg-color     #101510;
+@define-color border-color #99d4a3;
