--- a/.config/matugen/templates/wlogout/color.css
+++ b/.config/matugen/templates/wlogout/color.css
@@ -2,5 +2,5 @@
  * Matugen Generated
  * ----------------------------------------------------- */
 
-@define-color bg-color     #121318;
-@define-color border-color #b7c4ff;
+@define-color bg-color     {{colors.surface.default.hex}};
+@define-color border-color {{colors.primary.default.hex}};
