--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,10 +3,10 @@
 /* ------------------------*/
 
 /* Core colors from Matugen JSON */
-@define-color bg_main #101510;          /* Background */
-@define-color text_main #dfe4dc;    /* Main text */
-@define-color accent #99d4a3;          /* Accent / highlight */
+@define-color bg_main #121318;          /* Background */
+@define-color text_main #e3e1e9;    /* Main text */
+@define-color accent #b7c4ff;          /* Accent / highlight */
 
-@define-color battery_critical #ffb595;
-@define-color battery_charging #9fd49c;
+@define-color battery_critical #ffb2b9;
+@define-color battery_charging #95d5a7;
 @define-color overlay rgba(255,255,255,0.1);
