--- a/.config/wlogout/themes/matugen.css
+++ b/.config/wlogout/themes/matugen.css
@@ -2,5 +2,5 @@
  * Matugen Generated
  * ----------------------------------------------------- */
 
-@define-color bg-color     #101510;
-@define-color border-color #99d4a3;
+@define-color bg-color     #121318;
+@define-color border-color #b7c4ff;
