--- a/.config/wlogout/colors.css
+++ b/.config/wlogout/colors.css
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------
- * Matugen Generated
+ * GruvBox
  * ----------------------------------------------------- */
 
-@define-color bg-color     #121318;
-@define-color border-color #b7c4ff;
+@define-color bg-color #282828;
+@define-color border-color #83a598;
