Nvim update done - working version - lazy.nvim

--- a/.config/waybar/themes/matugen/dark.css
+++ b/.config/waybar/themes/matugen/dark.css
@@ -3,10 +3,10 @@
 /* ------------------------*/
 
 /* Core colors from Matugen JSON */
-@define-color bg_main #12140e;          /* Background */
-@define-color text_main #e2e3d8;    /* Main text */
-@define-color accent #b1d18a;          /* Accent / highlight */
+@define-color bg_main #0f1417;          /* Background */
+@define-color text_main #dee3e6;    /* Main text */
+@define-color accent #8ad0ee;          /* Accent / highlight */
 
-@define-color battery_critical #ffb595;
-@define-color battery_charging #abd290;
+@define-color battery_critical #ffb2b9;
+@define-color battery_charging #95d5a7;
 @define-color overlay rgba(255,255,255,0.1);
