--- a/.config/wlogout/themes/matugen.css
+++ b/.config/wlogout/themes/matugen.css
@@ -2,5 +2,5 @@
  * Matugen Generated
  * ----------------------------------------------------- */
 
-@define-color bg-color     #12140e;
-@define-color border-color #b1d18a;
+@define-color bg-color     #0f1417;
+@define-color border-color #8ad0ee;
