nvim - update plugins

--- a/.config/wlogout/colors.css
+++ b/.config/wlogout/colors.css
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------
- * GruvBox
+ * Solarized Osaka
  * ----------------------------------------------------- */
 
-@define-color bg-color #282828;
-@define-color border-color #83a598;
+@define-color bg-color #063642;
+@define-color border-color #b58900;
