--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -1,10 +1,10 @@
 /* ------------------------*/
-/* Gruvbox Dark            */
+/* Dark Solirized Osaka */
 /* ------------------------*/
 
-@define-color bg_main #282828;
-@define-color text_main #ebdbb2;
-@define-color accent #d79921; /* yellow accent */
-@define-color battery_critical #cc241d; /* red */
-@define-color battery_charging #98971a; /* green */
+@define-color bg_main #063642;
+@define-color text_main #ffffff;
+@define-color accent #b58900;
+@define-color battery_critical rgba(238,46,36,1);
+@define-color battery_charging #2ad55c;
 @define-color overlay rgba(255,255,255,0.1);
