--- a/.config/wlogout/themes/matugen.css
+++ b/.config/wlogout/themes/matugen.css
@@ -2,5 +2,5 @@
  * Matugen Generated
  * ----------------------------------------------------- */
 
-@define-color bg-color     #0f1417;
-@define-color border-color #8ad0ee;
+@define-color bg-color     #14140c;
+@define-color border-color #d1c973;
